theory of periodic structures

--- a/appendices.tex
+++ b/appendices.tex
@@ -84,6 +84,7 @@ $\kk$ 		& Wave vector in homogeneous medium\\
 $\KK$ 		& Bloch wave vector in periodic medium\\
 
 $\mathbb{R}$		& Real numbers\\
+$\mathbb{Z}$		& Integers\\
 $\ii$		& Imaginary unit, $\ii^2 = -1$\\
 $e$ 		& Euler constant, $e = 2.718\ldots$\\
 $h$ 		& Planck constant, $h = 6.626\cdot 10^{-34}$ J s\\
